trying to get a working site, changed html code

--- a/index.html
+++ b/index.html
@@ -1,16 +1,7 @@
-<!DOCTYPE html>
-
-<html>
-
-<head>
-	<title>Daniel Griffin</title>
-</head>
-
-
-
+<title>Daniel Griffin</title>
 <body>
-	<p>Just checking that this website works</p>
+<h1>This is daniel griffin's resume</h1>	
+	
+	
+	
 </body>
-
-
-</html>
