updating to include doctype

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
+<!DOCTYPE html>
+<html>
 <title>Daniel Griffin</title>
 <body>
-<h1>This is daniel griffin's resume</h1>	
-	
+<h1>This is daniel griffin's resume</h1>
+
 	
 	
 </body>
+</html>
