--- a/index.html
+++ b/index.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
-
 <html>
-
-<head>
-	<title>Daniel Griffin</title>
-</head>
-
-
-
+<title>Daniel Griffin</title>
 <body>
-	<p>Just checking that this website works</p>
+<h1>Daniel Griffin</h1>
+<img src="dan-image.jpg" alt="Image of Daniel Griffin">
+
+
 </body>
-
-
 </html>
