--- a/index.html
+++ b/index.html
@@ -2,17 +2,8 @@
 <html>
 <title>Daniel Griffin</title>
 <body>
-<<<<<<< HEAD
 <h1>Daniel Griffin</h1>
 <img src="dan-image.jpg" alt="Image of Daniel Griffin">
-
+<a href="resume.html">Resume</a>
 </body>
 </html>
-=======
-<h1>This is daniel griffin's resume</h1>
-
-	
-	
-</body>
-</html>
->>>>>>> 7b8d37c3f5fdc84d87cead3f6ef68eb2d1e41e6c
