--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <title>Daniel Griffin</title>
+<link href="stylesheets/style-mon.css" rel="stylesheet" />
 <body>
 <h1>Daniel Griffin</h1>
-<img src="dan-image.jpg" alt="Image of Daniel Griffin">
+<img class="self-image" src="dan-image.jpg" alt="Image of Daniel Griffin">
 <a href="resume.html">Resume</a>
 </body>
 </html>
