--- a/resume.html
+++ b/resume.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <title>Resume</title>
+<link href="stylesheets/style-mon.css" rel="stylesheet" />
 <body>
-<h1>Daniel Griffin</h1>
+<h1 class="name">Daniel Griffin</h1>
 <a href="index.html">Return</a>
 <ul>
+<p class="lead_item">Education</p>
 <li>Tufts School of Engineering</li>
 <li>Tufts School in Talloires</li>
 </ul>
