started bio file, updated information and matching css

--- a/resume.html
+++ b/resume.html
@@ -3,12 +3,23 @@
 <title>Resume</title>
 <link href="stylesheets/style-mon.css" rel="stylesheet" />
 <body>
+
 <h1 class="name">Daniel Griffin</h1>
 <a href="index.html">Return</a>
 <ul>
-<p class="lead_item">Education</p>
-<li>Tufts School of Engineering</li>
-<li>Tufts School in Talloires</li>
+	<li class="lead_item">Education</li>
+	<li>Tufts School of Engineering</li>
+	<ul>
+		<li class="sub_item">Bachelors of Science in Computer Science</li>
+		<li class="sub_item">Expected May 2015</li>
+	</ul>
+	<li>Tufts University in Talloires</li>
+	<ul>
+		<li class="sub_item">May - June 2012</li>
+	</ul>
+
 </ul>
+
 </body>
+
 </html>
