--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <h1>Daniel Griffin</h1>
 <img class="self-image" src="dan-image.jpg" alt="Image of Daniel Griffin">
 <a href="resume.html">Resume</a>
+<a href="bio.html">Bio</a>
 </body>
 </html>
