updated resume information, expanded main css file

--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,7 @@
 
 <h1 class="name">Daniel Griffin</h1>
 <a href="index.html">Return</a>
+<a href="bio.html">Bio</a>
 <ul>
 	<li class="lead_item">Education</li>
 	<li>Tufts School of Engineering</li>
@@ -17,7 +18,39 @@
 	<ul>
 		<li class="sub_item">May - June 2012</li>
 	</ul>
+</ul>
 
+<ul>
+	<li class="lead_item">Relavent Coursework</li>
+	<li>Computing in Engineering (VBA)</li>
+	<li>Introduction to Computer Science (C++)</li>
+	<li class="current">Data Structures (C++)</li>
+	<li class="current">Web Programing (HTML,CSS,JavaScript,PHP) </li>
+	<li class="nolist">*classes in red are in progress</li>
+</ul>
+
+<ul>
+	<li class="lead_item">Personal Experience</li>
+	<li>Belmont Day School in Belmont,MA</li>
+	<ul>
+		<li class="sub_item">Lifeguard: 06/2010 - 08/2012</li>
+		<li class="nolist">Maintained safe pool environment</li>
+	</ul> 
+	<li>Concord Consortium in Concord,MA</li>
+	<ul>
+		<li class="sub_item">Assistant in Green Energy Research: 09/19 - 02/12</li>
+		<li class="nolist">Constructed and tested physical models</li>
+	</ul>
+</ul>
+
+<ul>
+	<li class="lead_item">Skills</li>
+	<li>Computer Languages</li>
+	<ul><li class="nolist">HTML,CSS,C++,VBA</li></ul>
+	<li>Software</li>
+	<ul><li class="nolist">Matlab,Mathcad,Microsoft Office,Linux</li></ul>
+	<li>CAD Software</li>
+	<ul><li class="nolist">Pro/ENGINEER(Creo Elements),AutoCAD,SolidWorks</li></ul>
 </ul>
 
 </body>
