Finished resume information and starting format

--- a/resume.html
+++ b/resume.html
@@ -4,11 +4,10 @@
 <link href="stylesheets/style-mon.css" rel="stylesheet" />
 <body>
 
-<h1 class="name">Daniel Griffin</h1>
+<h1 class="name">Resume</h1>
 <a href="index.html">Return</a>
 <a href="bio.html">Bio</a>
-<ul>
-	<li class="lead_item">Education</li>
+<ul><li class="lead_item">Education</li>
 	<li>Tufts School of Engineering</li>
 	<ul>
 		<li class="sub_item">Bachelors of Science in Computer Science</li>
@@ -20,8 +19,7 @@
 	</ul>
 </ul>
 
-<ul>
-	<li class="lead_item">Relavent Coursework</li>
+<ul><li class="lead_item">Relavent Coursework</li>
 	<li>Computing in Engineering (VBA)</li>
 	<li>Introduction to Computer Science (C++)</li>
 	<li class="current">Data Structures (C++)</li>
@@ -29,8 +27,7 @@
 	<li class="nolist">*classes in red are in progress</li>
 </ul>
 
-<ul>
-	<li class="lead_item">Personal Experience</li>
+<ul><li class="lead_item">Personal Experience</li>
 	<li>Belmont Day School in Belmont,MA</li>
 	<ul>
 		<li class="sub_item">Lifeguard: 06/2010 - 08/2012</li>
@@ -43,14 +40,20 @@
 	</ul>
 </ul>
 
-<ul>
-	<li class="lead_item">Skills</li>
+<ul><li class="lead_item">Skills</li>
 	<li>Computer Languages</li>
 	<ul><li class="nolist">HTML,CSS,C++,VBA</li></ul>
 	<li>Software</li>
 	<ul><li class="nolist">Matlab,Mathcad,Microsoft Office,Linux</li></ul>
 	<li>CAD Software</li>
 	<ul><li class="nolist">Pro/ENGINEER(Creo Elements),AutoCAD,SolidWorks</li></ul>
+</ul>
+
+<ul><li class="lead_item">Activities</li>
+	<li>Tufts Hybrid Racing</li>
+	<ul><li class="nolist">Chassis Fabrication Team: 10/11 - Present</il></ul>
+	<li>Zeta Beta Tau</li>
+	<ul><li class="nolist">Treasurer and Chair of House Improvement: 01/13 - present </li></ul>
 </ul>
 
 </body>
