--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
 <body>
 
 <h1 class="name">Resume</h1>
-<a href="index.html">Return</a>
+<a href="index.html">Home Page</a>
 <a href="bio.html">Bio</a>
 <ul><li class="lead_item">Education</li>
 	<li>Tufts School of Engineering</li>
@@ -24,7 +24,7 @@
 	<li>Introduction to Computer Science (C++)</li>
 	<li class="current">Data Structures (C++)</li>
 	<li class="current">Web Programing (HTML,CSS,JavaScript,PHP) </li>
-	<li class="nolist">*classes in red are in progress</li>
+	<li class="nolist">*classes in orange are in progress</li>
 </ul>
 
 <ul><li class="lead_item">Personal Experience</li>
