fixed error in html code (all three files)

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
 <title>Daniel Griffin</title>
 <link href="stylesheets/style-mon.css" rel="stylesheet" />
-
+</head>
 <body>
 	<h1>Daniel Griffin</h1>
 	<img class="self-image" src="dan-image.jpg" alt="Image of Daniel Griffin">
