--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
 <title>Resume</title>
 <link href="stylesheets/style-mon.css" rel="stylesheet" />
+</head>
 <body>
 
 <h1 class="name">Resume</h1>
