fixed errors to meet html5 required format removing internal ul

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Daniel Griffin</title>
 <link href="stylesheets/style-mon.css" rel="stylesheet" />
+<meta charset="UTF-8">
 </head>
 <body>
 	<h1>Daniel Griffin</h1>
