--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,7 @@
 <head>
 <title>Resume</title>
 <link href="stylesheets/style-mon.css" rel="stylesheet" />
+<meta charset="UTF-8">
 </head>
 <body>
 
@@ -11,14 +12,10 @@
 <a href="bio.html">Bio</a>
 <ul><li class="lead_item">Education</li>
 	<li>Tufts School of Engineering</li>
-	<ul>
-		<li class="sub_item">Bachelors of Science in Computer Science</li>
-		<li class="sub_item">Expected May 2015</li>
-	</ul>
+	<li class="sub_item">Bachelors of Science in Computer Science</li>
+	<li class="sub_item">Expected May 2015</li>
 	<li>Tufts University in Talloires</li>
-	<ul>
-		<li class="sub_item">May - June 2012</li>
-	</ul>
+	<li class="sub_item">May - June 2012</li>
 </ul>
 
 <ul><li class="lead_item">Relavent Coursework</li>
@@ -31,31 +28,27 @@
 
 <ul><li class="lead_item">Personal Experience</li>
 	<li>Belmont Day School in Belmont,MA</li>
-	<ul>
-		<li class="sub_item">Lifeguard: 06/2010 - 08/2012</li>
-		<li class="nolist">Maintained safe pool environment</li>
-	</ul> 
+	<li class="sub_item">Lifeguard: 06/2010 - 08/2012</li>
+	<li class="sub_item">Maintained safe pool environment</li>
 	<li>Concord Consortium in Concord,MA</li>
-	<ul>
-		<li class="sub_item">Assistant in Green Energy Research: 09/19 - 02/12</li>
-		<li class="nolist">Constructed and tested physical models</li>
-	</ul>
+	<li class="sub_item">Assistant in Green Energy Research: 09/19 - 02/12</li>
+	<li class="sub_item">Constructed and tested physical models</li>
 </ul>
 
 <ul><li class="lead_item">Skills</li>
 	<li>Computer Languages</li>
-	<ul><li class="nolist">HTML,CSS,C++,VBA</li></ul>
+	<li class="sub_item">HTML,CSS,C++,VBA</li>
 	<li>Software</li>
-	<ul><li class="nolist">Matlab,Mathcad,Microsoft Office,Linux</li></ul>
+	<li class="sub_item">Matlab,Mathcad,Microsoft Office,Linux</li>
 	<li>CAD Software</li>
-	<ul><li class="nolist">Pro/ENGINEER(Creo Elements),AutoCAD,SolidWorks</li></ul>
+	<li class="sub_item">Pro/ENGINEER(Creo Elements),AutoCAD,SolidWorks</li>
 </ul>
 
 <ul><li class="lead_item">Activities</li>
 	<li>Tufts Hybrid Racing</li>
-	<ul><li class="nolist">Chassis Fabrication Team: 10/11 - Present</il></ul>
+	<li class="sub_item">Chassis Fabrication Team: 10/11 - Present</li>
 	<li>Zeta Beta Tau</li>
-	<ul><li class="nolist">Treasurer and Chair of House Improvement: 01/13 - present </li></ul>
+	<li class="sub_list">Treasurer and Chair of House Improvement: 01/13 - present </li>
 </ul>
 
 </body>
