--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <title>Resume</title>
-<link href="stylesheets/style-mon.css" rel="stylesheet" />
+<link href="stylesheets/style-mon.css" rel="stylesheet" media="only screen and (min-device-width:641px)" />
+<link href="stylesheets/style-phone.css" rel="stylesheet" media="only screen and (max-device-width:640px)" />
 <meta charset="UTF-8">
 </head>
 <body>
