added resume document download on resume page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta charset="UTF-8">
 </head>
 <body>
-	<h1>Daniel Griffin</h1>
+	<h1 class="name">Daniel Griffin</h1>
 	<img class="self-image" src="dan-image.jpg" alt="Image of Daniel Griffin">
 	<a href="resume.html">Resume</a>
 	<a href="bio.html">Bio</a>
