updated text color to match better

--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,7 @@
 	<li>Introduction to Computer Science (C++)</li>
 	<li class="current">Data Structures (C++)</li>
 	<li class="current">Web Programing (HTML,CSS,JavaScript,PHP) </li>
-	<li class="nolist">*classes in orange are in progress</li>
+	<li class="nolist">*classes in red are in progress</li>
 </ul>
 
 <ul><li class="lead_item">Personal Experience</li>
