repositioned links on index.hmtl

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 	<h1 class="name">Daniel Griffin</h1>
 	<img class="self-image" src="dan-image.jpg" alt="Image of Daniel Griffin">
-	<a href="resume.html">Resume</a>
-	<a href="bio.html">Bio</a>
+	<a class="link_index" href="resume.html">Resume</a>
+	<a class="link_index" href="bio.html">Bio</a>
 
 </body>
 </html>
