--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta charset="UTF-8">
 </head>
 <body>
-	<h1 class="name">Daniel Griffin</h1>
+	<div class="headerbox"><h1 class="name">Daniel Griffin</h1></div>
 	<img class="self-image" src="dan-image.jpg" alt="Image of Daniel Griffin">
 	<a class="link_index" href="resume.html">Resume</a>
 	<a class="link_index" href="bio.html">Bio</a>
