--- a/resume.html
+++ b/resume.html
@@ -10,9 +10,6 @@
 
 <h1 class="name">Resume</h1>
 
-<a href="index.html">Home Page</a>
-<a href="bio.html">Bio</a>
-
 <ul><li class="lead_item">Education</li>
 	<li>Tufts School of Engineering</li>
 	<li class="sub_item">Bachelors of Science in Computer Science</li>
@@ -54,7 +51,9 @@
 	<li class="sub_list">Treasurer and Chair of House Improvement: 01/13 - present </li>
 </ul>
 
-<a href="files/resume.docx">Download</a>
+<a class="link_resume" href="index.html">Home Page</a>
+<a class="link_resume" href="bio.html">Bio</a>
+<a class="link_resume" href="files/resume.docx">Download</a>
 
 </body>
 
