added a projects page for code example

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<img class="self-image" src="dan-image.jpg" alt="Image of Daniel Griffin">
 	<a class="link_index" href="resume.html">Resume</a>
 	<a class="link_index" href="bio.html">Bio</a>
-
+	<a class="link_index" href="projects.html">Projects</a>
+	
 </body>
 </html>
