--- a/resume.html
+++ b/resume.html
@@ -53,6 +53,7 @@
 
 <a class="link_resume" href="index.html">Home Page</a>
 <a class="link_resume" href="bio.html">Bio</a>
+<a class="link_resume" href="projects.html">Projects</a>
 <a class="link_resume" href="files/resume.docx">Download</a>
 
 </body>
