added a VBA file example, moved the html file example

--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,13 @@
 	
 	<div class="example_text"><p class="textbox_small">HTML: This website's content is
 	written in HTML. All 4 pages are contained in a zip file.</p>
-	<a class="link_example" href="html-files.zip">HTML Examples</a>
+	<a class="link_example" href="files/html-files.zip">HTML Examples</a>
+	</div>
+	
+	<div class="example_text"><p class="textbox_small"> VBA: This code is written within an 
+	excel document. The program tests the user on his or her knowledge of the usage of medications
+	avaliable to Massachusetts certified basic emergency medical technician.</p>
+	<a class="link_example" href="files/emt_vba.xlsm">HTML Examples</a>
 	</div>
 	
 	<div>
