fixed spelling error

--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
 	website are written in CSS. There is one for normal viewing and 
 	there is also one for the moble experience.</p>
 	<a class="link_example" href="stylesheets/style-mon.css">CSS Example</a>
-	<a class="link_example" href="stylesheets/style-phone.css">CSS Moble Example</a>
+	<a class="link_example" href="stylesheets/style-phone.css">CSS mobile Example</a>
 	</div>
 	
 	<div class="example_text"><p class="textbox_small">HTML: This website's content is
