--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 <body onload="init()">
 	<div class="headerbox"><h1 class="name">Daniel Griffin</h1></div>
 	<img class="self-image" src="dan-image.jpg" alt="Image of Daniel Griffin">
-	<a class="link_index" href="resume.html">Resume</a>
-	<a class="link_index" href="bio.html">Bio</a>
-	<a class="link_index" href="projects.html">Projects</a>
+	<div class = "links">
+	<button class = "link_index" type="button" onclick = "window.location.href='resume.html'">Resume</button>
+	<button class = "link_index" type="button" onclick = "window.location.href='bio.html'">Bio</button>
+	<button class = "link_index" type="button" onclick = "window.location.href='projects.html'">Projects</button>
+	</div>
 	<div id="map_header">Boston MBTA RedLine<div id="map_canvas"></div></br>Click on stop for arrival times</div>
 </body>
 </html>
