added additional header and corresponding formating

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script src="script.js"></script>
 </head>
 <body onload="init()">
-	<div class="headerbox"><h1 class="name">Daniel Griffin</h1></div>
+	<div class="headerbox"><h1 class="name">Daniel Griffin</h1><h2 class = "description"> Student // Engineer // Bostonian</h2></div>
 	<img class="self-image" src="dan-image.jpg" alt="Image of Daniel Griffin">
 	<div class = "links">
 	<button class = "link_index" type="button" onclick = "window.location.href='resume.html'">Resume</button>
