--- a/index.html
+++ b/index.html
@@ -10,13 +10,25 @@
 	<script src="script.js"></script>
 </head>
 <body onload="init()">
-	<div class="headerbox"><h1 class="name">Daniel Griffin</h1><h2 class = "description"> Student // Engineer // Bostonian</h2></div>
+	<div class ="wrapper">
+	<div class="headerbox"><h1 class="title">Daniel Griffin</h1><h2 class = "description"> Student // Engineer // Bostonian</h2></div>
 	<img class="self-image" src="dan-image.jpg" alt="Image of Daniel Griffin">
 	<div class = "links">
-	<button class = "link_index" type="button" onclick = "window.location.href='resume.html'">Resume</button>
-	<button class = "link_index" type="button" onclick = "window.location.href='bio.html'">Bio</button>
-	<button class = "link_index" type="button" onclick = "window.location.href='projects.html'">Projects</button>
+	<a class = "link"  href = 'resume.html'>Resume</a>
+	<a class = "link"  href = 'projects.html'>Projects</a>
+	</div>	
+	<div class = "bio">
+	<h2> A little about me</h2>
+	<p class="textbox">I am currently a student within the Tufts School of Engineering for Computer Science.
+	The language my studies have focused in is C++ but I am also currently learning html and css.
+	During my time at Tufts, I spent one summer studying in rural France. This trip intensified 
+	my desire to explore the world.  I have had the opportunity to visit Rome, London, Jerusalem, 
+	Talloires France and many of the United States national parks but I eagerly await the next 
+	opportunity for travel. </p>
+	<p class="textbox">When I am not working I am working on my Emergency Medical Technician certification, scuba
+	diving, rock climbing or hiking. My remaining time is dedicated to maintaining my fraternity's
+	financial stability as the house Treasurer. </p>
 	</div>
-	<div id="map_header">Boston MBTA RedLine<div id="map_canvas"></div></br>Click on stop for arrival times</div>
+	</div>
 </body>
 </html>
