--- a/resume.html
+++ b/resume.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 
-<h1 class="name">Resume</h1>
-
+<div class = "headerbox"><h1 class = "title">Resume</h1></div>
+<div class = "resume">
 <ul><li class="lead_item">Education</li>
 	<li>Tufts School of Engineering</li>
 	<li class="sub_item">Bachelors of Science in Computer Science</li>
@@ -22,7 +22,7 @@
 	<li>Computing in Engineering (VBA)</li>
 	<li>Introduction to Computer Science (C++)</li>
 	<li class="current">Data Structures (C++)</li>
-	<li class="current">Web Programing (HTML,CSS,JavaScript,PHP) </li>
+	<li class="current">Web Programing (HTML,CSS,JavaScript) </li>
 	<li class="nolist">*classes in red are in progress</li>
 </ul>
 
@@ -50,12 +50,12 @@
 	<li>Zeta Beta Tau</li>
 	<li class="sub_list">Treasurer and Chair of House Improvement: 01/13 - present </li>
 </ul>
-
-<a class="link_resume" href="index.html">Home Page</a>
-<a class="link_resume" href="bio.html">Bio</a>
-<a class="link_resume" href="projects.html">Projects</a>
-<a class="link_resume" href="files/resume.docx">Download</a>
-
+</div>
+<div class = "links">
+	<a class="link" href="index.html">Home Page</a>
+	<a class="link" href="projects.html">Projects</a>
+	<a class="link" href="files/resume.docx">Download</a>
+</div>
 </body>
 
 </html>
