complete rework of classes and css file

--- a/index.html
+++ b/index.html
@@ -2,33 +2,45 @@
 <html>
 <head>
 <title>Daniel Griffin</title>
-	<link href="stylesheets/style-mon.css" rel="stylesheet" media="only screen and (min-device-width:801px)" />
-	<link href="stylesheets/style-phone.css" rel="stylesheet" media="only screen and (max-device-width:800px)" />
+	<link href="stylesheets/style-mon.css" rel="stylesheet"><!-- media="only screen and (min-device-width:801px)" />-->
+	<!--<link href="stylesheets/style-phone.css" rel="stylesheet" media="only screen and (max-device-width:800px)" />-->
 	<meta charset="UTF-8">
 	<!--<link rel="shortcut icon" href="icon.ico"/>-->
-	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=true&amp;libraries=places"></script>
-	<script src="script.js"></script>
 </head>
-<body onload="init()">
+<body>
 	<div class ="wrapper">
-	<div class="headerbox"><h1 class="title">Daniel Griffin</h1><h2 class = "description"> Student // Engineer // Bostonian</h2></div>
-	<img class="self-image" src="dan-image.jpg" alt="Image of Daniel Griffin">
-	<div class = "links">
-	<a class = "link"  href = 'resume.html'>Resume</a>
-	<a class = "link"  href = 'projects.html'>Projects</a>
-	</div>	
-	<div class = "bio">
-	<h2> A little about me</h2>
-	<p class="textbox">I am currently a student within the Tufts School of Engineering for Computer Science.
-	The language my studies have focused in is C++ but I am also currently learning html and css.
-	During my time at Tufts, I spent one summer studying in rural France. This trip intensified 
-	my desire to explore the world.  I have had the opportunity to visit Rome, London, Jerusalem, 
-	Talloires France and many of the United States national parks but I eagerly await the next 
-	opportunity for travel. </p>
-	<p class="textbox">When I am not working I am working on my Emergency Medical Technician certification, scuba
-	diving, rock climbing or hiking. My remaining time is dedicated to maintaining my fraternity's
-	financial stability as the house Treasurer. </p>
-	</div>
+		<div class="header">
+			<h1>Daniel Griffin</h1>
+			<nav>
+				<div class="navigation">
+					<a href="resume.html">Resume</a>
+					<a href="projects.html">Projects</a>
+				</div>
+			</nav>
+			<h2> Student // Engineer // Bostonian</h2>
+		</div>	
+		<div class="clear"></div>
+		
+		<div class="mainContent">
+			<img class="self-image" src="dan-image.jpg" alt="Image of Daniel Griffin">
+			<div class = "bio">
+				<h2>A little about me</h2>
+				<p>
+					I am currently a student within the Tufts School of Engineering for Computer Science.
+					The language my studies have focused in is C++ but I am also currently learning html and css.
+					During my time at Tufts, I spent one summer studying in rural France. This trip intensified 
+					my desire to explore the world.  I have had the opportunity to visit Rome, London, Jerusalem, 
+					Talloires France and many of the United States national parks but I eagerly await the next 
+					opportunity for travel.
+				</p>
+				<p>
+					When I am not working I am working on my Emergency Medical Technician certification, scuba
+					diving, rock climbing or hiking. My remaining time is dedicated to maintaining my fraternity's
+					financial stability as the house Treasurer.
+				</p>
+			</div>
+			<div class="clear"></div>
+		</div>
 	</div>
 </body>
 </html>
