--- a/resume.html
+++ b/resume.html
@@ -1,61 +1,70 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Resume</title>
-<link href="stylesheets/style-mon.css" rel="stylesheet" media="only screen and (min-device-width:801px)" />
-<link href="stylesheets/style-phone.css" rel="stylesheet" media="only screen and (max-device-width:800px)" />
-<meta charset="UTF-8">
+	<title>Resume</title>
+	<link href="stylesheets/style-mon.css" rel="stylesheet"><!-- media="only screen and (min-device-width:801px)" />-->
+	<!--<link href="stylesheets/style-phone.css" rel="stylesheet" media="only screen and (max-device-width:800px)" />-->
+	<meta charset="UTF-8">
 </head>
 <body>
+	<div class="header">
+		<h1>Resume</h1>
+		<nav>
+			<div class="navigation">
+				<a href="index.html">Home Page</a>
+				<a href="projects.html">Projects</a>
+				<a href="files/resume.docx">Download Resume</a>
+			</div>
+			<h2> Student // Engineer // Bostonian</h2>
+	</div>
+	<div class="clear"></div>
+	<div class="resume">
+		<ul>
+			<li>Education</li>
+			<li>Tufts School of Engineering</li>
+			<li class="sectionDetail">Bachelors of Science in Computer Science</li>
+			<li class="sectionDetail">Expected May 2015</li>
+			<li>Tufts University in Talloires</li>
+			<li class="sectionDetail">May - June 2012</li>
+		</ul>
 
-<div class = "headerbox"><h1 class = "title">Resume</h1></div>
-<div class = "resume">
-<ul><li class="lead_item">Education</li>
-	<li>Tufts School of Engineering</li>
-	<li class="sub_item">Bachelors of Science in Computer Science</li>
-	<li class="sub_item">Expected May 2015</li>
-	<li>Tufts University in Talloires</li>
-	<li class="sub_item">May - June 2012</li>
-</ul>
+		<ul>
+			<li>Relavent Coursework</li>
+			<li>Computing in Engineering (VBA)</li>
+			<li>Introduction to Computer Science (C++)</li>
+			<li class="currentClass">Data Structures (C++)</li>
+			<li class="currentClass">Web Programing (HTML,CSS,JavaScript) </li>
+			<li class="sectionNote">*classes in red are in progress</li>
+		</ul>
 
-<ul><li class="lead_item">Relavent Coursework</li>
-	<li>Computing in Engineering (VBA)</li>
-	<li>Introduction to Computer Science (C++)</li>
-	<li class="current">Data Structures (C++)</li>
-	<li class="current">Web Programing (HTML,CSS,JavaScript) </li>
-	<li class="nolist">*classes in red are in progress</li>
-</ul>
+		<ul>
+			<li>Personal Experience</li>
+			<li>Belmont Day School in Belmont,MA</li>
+			<li class="sectionDetail">Lifeguard: 06/2010 - 08/2012</li>
+			<li class="sectionDetail">Maintained safe pool environment</li>
+			<li>Concord Consortium in Concord,MA</li>
+			<li class="sectionDetail">Assistant in Green Energy Research: 09/19 - 02/12</li>
+			<li class="sectionDetail">Constructed and tested physical models</li>
+		</ul>
 
-<ul><li class="lead_item">Personal Experience</li>
-	<li>Belmont Day School in Belmont,MA</li>
-	<li class="sub_item">Lifeguard: 06/2010 - 08/2012</li>
-	<li class="sub_item">Maintained safe pool environment</li>
-	<li>Concord Consortium in Concord,MA</li>
-	<li class="sub_item">Assistant in Green Energy Research: 09/19 - 02/12</li>
-	<li class="sub_item">Constructed and tested physical models</li>
-</ul>
+		<ul>
+			<li>Skills</li>
+			<li>Computer Languages</li>
+			<li class="sectionDetail">HTML,CSS,Javascript,C++,VBA</li>
+			<li>Software</li>
+			<li class="sectionDetail">Matlab,Mathcad,Microsoft Office,Linux</li>
+			<li>CAD Software</li>
+			<li class="sectionDetail">Pro/ENGINEER(Creo Elements),AutoCAD,SolidWorks</li>
+		</ul>
 
-<ul><li class="lead_item">Skills</li>
-	<li>Computer Languages</li>
-	<li class="sub_item">HTML,CSS,C++,VBA</li>
-	<li>Software</li>
-	<li class="sub_item">Matlab,Mathcad,Microsoft Office,Linux</li>
-	<li>CAD Software</li>
-	<li class="sub_item">Pro/ENGINEER(Creo Elements),AutoCAD,SolidWorks</li>
-</ul>
-
-<ul><li class="lead_item">Activities</li>
-	<li>Tufts Hybrid Racing</li>
-	<li class="sub_item">Chassis Fabrication Team: 10/11 - Present</li>
-	<li>Zeta Beta Tau</li>
-	<li class="sub_list">Treasurer and Chair of House Improvement: 01/13 - present </li>
-</ul>
-</div>
-<div class = "links">
-	<a class="link" href="index.html">Home Page</a>
-	<a class="link" href="projects.html">Projects</a>
-	<a class="link" href="files/resume.docx">Download</a>
-</div>
+		<ul>
+			<li>Activities</li>
+			<li>Tufts Hybrid Racing</li>
+			<li class="sectionDetail">Chassis Fabrication Team: 10/11 - Present</li>
+			<li>Zeta Beta Tau</li>
+			<li class="sectionDetail">Treasurer and Chair of House Improvement: 01/13 - present </li>
+		</ul>
+	</div>
 </body>
 
 </html>
