--- a/projects.html
+++ b/projects.html
@@ -2,42 +2,59 @@
 <html>
 <head>
 <title>Projects</title>
-<link href="stylesheets/style-mon.css" rel="stylesheet" media="only screen and (min-device-width:801px)" />
-<link href="stylesheets/style-phone.css" rel="stylesheet" media="only screen and (max-device-width:800px)" />
+<link href="stylesheets/style-mon.css" rel="stylesheet"><!-- media="only screen and (min-device-width:801px)" />-->
+	<!--<link href="stylesheets/style-phone.css" rel="stylesheet" media="only screen and (max-device-width:800px)" />-->
 <meta charset="UTF-8">
 </head>
 <body>
-	<h1 class="name">Projects</h1>
-	<div class="example_text"><p class="textbox_small">C++: This is an example of my C++ code work.
-	This work was for a project in which a family tree was given in with
-	the form of number IDs and name and then an ID with the two parent
-	IDs. The longest family tree will then be calculated.</p>
-	<a class="link_example" href="files/maxlength.cpp">C++ Example</a>
+	<div class="header">
+		<h1>Projects</h1>
+			<nav>
+				<div class="navigation">
+					<a href="index.html">Home Page</a>
+					<a href="resume.html">Resume</a>
+				</div>
+			</nav>
+			<h2> Student // Engineer // Bostonian</h2>
 	</div>
-	
-	
-	<div class="example_text"><p class="textbox_small">CSS: The stylesheets for this
-	website are written in CSS. There is one for normal viewing and 
-	there is also one for the moble experience.</p>
-	<a class="link_example" href="stylesheets/style-mon.css">CSS Example</a>
-	<a class="link_example" href="stylesheets/style-phone.css">CSS mobile Example</a>
-	</div>
-	
-	<div class="example_text"><p class="textbox_small">HTML: This website's content is
-	written in HTML. All 4 pages are contained in a zip file.</p>
-	<a class="link_example" href="files/html-files.zip">HTML Examples</a>
-	</div>
-	
-	<div class="example_text"><p class="textbox_small"> VBA: This code is written within an 
-	excel document. The program tests the user on his or her knowledge of the usage of medications
-	avaliable to Massachusetts certified basic emergency medical technician.</p>
-	<a class="link_example" href="files/emt_vba.xlsm">HTML Examples</a>
-	</div>
-	
-	<div>
-	<a class="link_bio" href="index.html">Home Page</a>
-	<a class="link_bio" href="resume.html">Resume</a>
-	<a class="link_bio" href="bio.html">Bio</a>
+	<div class="clear"></div>
+	<div class="projectDiscriptions">
+		<div>
+			<p>
+				C++: This is an example of my C++ code work.
+				This work was for a project in which a family tree was given in with
+				the form of number IDs and name and then an ID with the two parent
+				IDs. The longest family tree will then be calculated.
+			</p>
+			<a href="files/maxlength.cpp">C++ Example</a>
+		</div>
+				
+		<div>
+			<p>
+				CSS: The stylesheets for this
+				website are written in CSS. There is one for normal viewing and 
+				there is also one for the moble experience.
+			</p>
+			<a href="stylesheets/style-mon.css">CSS Example</a>
+			<a href="stylesheets/style-phone.css">CSS mobile Example</a>
+		</div>
+		
+		<div>
+			<p>
+				HTML: This website's content is
+				written in HTML. All pages are contained in a zip file.
+			</p>
+		<a href="files/html-files.zip">HTML Examples</a>
+		</div>
+		
+		<div>
+			<p>
+				VBA: This code is written within an 
+				excel document. The program tests the user on his or her knowledge of the usage of medications
+				avaliable to Massachusetts certified basic emergency medical technician.
+			</p>
+			<a href="files/emt_vba.xlsm">VBA Example</a>
+		</div>
 	</div>
 </body>
 </html>
