removed bio page, moved script, updated project info:

--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,8 @@
 			<p>
 				CSS: The stylesheets for this
 				website are written in CSS. There is one for normal viewing and 
-				there is also one for the moble experience.
+				there is also one for the moble experience. The moble css is not
+				current and as such is not active.
 			</p>
 			<a href="stylesheets/style-mon.css">CSS Example</a>
 			<a href="stylesheets/style-phone.css">CSS mobile Example</a>
@@ -41,8 +42,8 @@
 		
 		<div>
 			<p>
-				HTML: This website's content is
-				written in HTML. All pages are contained in a zip file.
+				HTML: This website's content is	written in HTML.
+				All pages are contained in a zip file.
 			</p>
 		<a href="files/html-files.zip">HTML Examples</a>
 		</div>
