--- a/projects.html
+++ b/projects.html
@@ -22,11 +22,16 @@
 		<div>
 			<p>
 				C++: This is an example of my C++ code work.
-				This work was for a project in which a family tree was given in with
-				the form of number IDs and name and then an ID with the two parent
-				IDs. The longest family tree will then be calculated.
+				This is my solution to problems 18 and 67 of Project Euler. 
+				These problems are the same in principle but different in scale.
+				The basic problem is to intake a triangle of random numbers and 
+				find the largest sum possible by going down the tree by the two
+				children. The code currently is set to run problem 67. In order to
+				run it for problem 18 max_inrow must be set to 15. The problems can be
+				found at <a class="noeffect" href="http://projecteuler.net/problem=18">problem 18</a> and 
+				<a class="noeffect" href="http://projecteuler.net/problem=67">problem 67</a>
 			</p>
-			<a href="files/maxlength.cpp">C++ Example</a>
+			<a href="files/projectEuler.zip">C++ Example</a>
 		</div>
 				
 		<div>
