added javascript example

--- a/projects.html
+++ b/projects.html
@@ -21,8 +21,7 @@
 	<div class="projectDiscriptions">
 		<div>
 			<p>
-				C++: This is an example of my C++ code work.
-				This is my solution to problems 18 and 67 of Project Euler. 
+				C++: This is my solution to problems 18 and 67 of Project Euler. 
 				These problems are the same in principle but different in scale.
 				The basic problem is to intake a triangle of random numbers and 
 				find the largest sum possible by going down the tree by the two
@@ -51,6 +50,19 @@
 				All pages are contained in a zip file.
 			</p>
 		<a href="files/html-files.zip">HTML Examples</a>
+		</div>
+		
+		<div>
+			<p>
+				JavaScript: This is code using the Google Maps API
+				and plot the MBTA Red Line. If the user clicks on a stop
+				it will give the current information of incoming trains.
+				It will then take in the users location, center the map on
+				the user and tell them the distance to the nearest T stop.
+				Unfortunately as of now the code is non-functional as the
+				website used to take in the train information was taken down.
+			</p>
+			<a href="files/JavaScript.zip">JavaScript Example</a>
 		</div>
 		
 		<div>
