changed color to make better contrast

--- a/resume.html
+++ b/resume.html
@@ -34,7 +34,7 @@
 			<li>Introduction to Computer Science (C++)</li>
 			<li class="currentClass">Data Structures (C++)</li>
 			<li class="currentClass">Web Programing (HTML,CSS,JavaScript) </li>
-			<li class="sectionNote">*classes in red are in progress</li>
+			<li class="sectionNote">*classes in blue are in progress</li>
 		</ul>
 
 		<ul>
