--- a/projects.html
+++ b/projects.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Projects</title>
-<link href="stylesheets/style-mon.css" rel="stylesheet"><!-- media="only screen and (min-device-width:801px)" />-->
-	<!--<link href="stylesheets/style-phone.css" rel="stylesheet" media="only screen and (max-device-width:800px)" />-->
-<meta charset="UTF-8">
+	<title>Projects</title>
+	<link href="stylesheets/style-mon.css" rel="stylesheet" media="only screen and (min-device-width:801px)" />
+	<link href="stylesheets/style-phone.css" rel="stylesheet" media="only screen and (max-device-width:800px)" />
+	<meta charset="UTF-8">
 </head>
 <body>
 	<div class="header">
