updated css example text

--- a/projects.html
+++ b/projects.html
@@ -37,8 +37,8 @@
 			<p>
 				CSS: The stylesheets for this
 				website are written in CSS. There is one for normal viewing and 
-				there is also one for the moble experience. The moble css is not
-				current and as such is not active.
+				there is also one for the moble experience. The moble css is currenly
+				in progress.
 			</p>
 			<a href="stylesheets/style-mon.css">CSS Example</a>
 			<a href="stylesheets/style-phone.css">CSS mobile Example</a>
