added map and corresponding css and 2 additional html pages

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 				<div class="navigation">
 					<a href="resume.html">Resume</a>
 					<a href="projects.html">Projects</a>
+					<a href="map/index.html">MBTA Red Line</a>
 				</div>
 			</nav>
 			<h2> Student // Engineer // Bostonian</h2>
