--- a/resume.html
+++ b/resume.html
@@ -13,6 +13,7 @@
 			<div class="navigation">
 				<a href="index.html">Home Page</a>
 				<a href="projects.html">Projects</a>
+				<a href="map/index.html">MBTA Red Line</a>
 				<a href="files/resume.docx">Download Resume</a>
 			</div>
 			<h2> Student // Engineer // Bostonian</h2>
