--- a/projects.html
+++ b/projects.html
@@ -13,6 +13,7 @@
 				<div class="navigation">
 					<a href="index.html">Home Page</a>
 					<a href="resume.html">Resume</a>
+					<a href="map/index.html">MBTA Red Line</a>
 				</div>
 			</nav>
 			<h2> Student // Engineer // Bostonian</h2>
@@ -57,12 +58,12 @@
 				JavaScript: This is code using the Google Maps API
 				and plot the MBTA Red Line. If the user clicks on a stop
 				it will give the current information of incoming trains.
-				It will then take in the users location, center the map on
-				the user and tell them the distance to the nearest T stop.
-				Unfortunately as of now the code is non-functional as the
-				website used to take in the train information was taken down.
+				It attempts to take in the users location. If successful
+				it will center the map on the user and tell them the distance
+				 to the nearest T stop.
 			</p>
-			<a href="files/JavaScript.zip">JavaScript Example</a>
+			<a href="files/JavaScript.zip">Download JavaScript Example</a>
+			<a href="map/index.html">Live JavaScript Example</a>
 		</div>
 		
 		<div>
