--- a/map/index.html
+++ b/map/index.html
@@ -23,6 +23,6 @@
 			<h2> Student // Engineer // Bostonian</h2>
 		</div>	
 		<div class="clear"></div>
-		<div id="map_canvas"></div>
+		<div id="map_canvas">Display issues with Firefox. Known to work with Google Chrome</div>
 		</div>
 	</body>
