fixing error with firefox in css

--- a/map/index.html
+++ b/map/index.html
@@ -18,11 +18,11 @@
 					<a href="../resume.html">Resume</a>
 					<a href="../projects.html">Projects</a>
 					<a class="help" href="howto.html">Instructions</a>
-				</div>
+				</div>	
 			</nav>
 			<h2> Student // Engineer // Bostonian</h2>
 		</div>	
 		<div class="clear"></div>
-		<div id="map_canvas">Display issues with Firefox. Known to work with Google Chrome</div>
+		<div id="map_canvas"></div>
 		</div>
 	</body>
